# drempower_sdk

./: .gitignore  CMakeLists.txt  README.md  package.xml
include/drempower_sdk/: drempower_driver.hpp  drempower_sc_driver.hpp  parameter_interface.hpp
launch/: drempower_launch.py  drempower_sc_launch.py
msg/: MotorCommand.msg
scripts/: sine_speed_test_node.py  test_sdk_node.py
src/: drempower_driver.cpp  drempower_node.cpp  drempower_sc_driver.cpp  drempower_sc_node.cpp
